# ige-mac-video-sink

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac
data/: .gitignore  Makefile.am  gtk-osx-video-embed.pc.in  ige-mac-video-embed.pc.in
docs/reference/: .gitignore  Makefile.am  ige-mac-video-sink-docs.sgml  ige-mac-video-sink-sections.txt  ige-mac-video-sink.types
docs/reference/tmpl/: ige-mac-video-sink-unused.sgml  video-embed.sgml
src/: .gitignore  Makefile.am  gtk-osx-video-embed.c  gtk-osx-video-embed.h  gtk-osx-video-sink.c  gtk-osx-video-sink.h  ige-mac-video-embed.c  ige-mac-video-embed.h  ige-mac-video-sink.c  ige-mac-video-sink.h  ige-osx-video-embed.c  ige-osx-video-embed.h  ige-osx-video-sink.c  ige-osx-video-sink.h  test-sink.c  test.c
